--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
             "args": []
         },
         {
-            "name": "CCU-Jack",
+            "name": "IISM-CCU-Api",
             "type": "go",
             "request": "launch",
             "mode": "auto",
